@@ -188,6 +188,9 @@ h2 {
       tal:content="structure model/preview">
       <!-- this text is replaced by Silva content -->
     </div>
+    <!-- clear the newsitem box, in case the content is smaller 
+         than the newsitem height -->
+    <br clear="both" />
   </tal:block>
   <tal:block condition="python:not model.get_unapproved_version() and model.meta_type == 'Silva Agenda Item'">
     <tal:public tal:condition="python: model.get_viewable()">
@@ -200,6 +203,7 @@ h2 {
         tal:content="structure model/preview">
       <!-- this text is replaced by Silva content -->
     </div>
+    <br clear="both" />
   </tal:block>
   <span tal:replace="nothing"> _________ or show ghost info ____ </span>
   <div tal:condition="not:unapproved_version"
