@@ -23,7 +23,7 @@ revert_to_previous...Revert to previous
 manual_close.........Manual close
 </tal:toc>
 
-<span tal:replace="nothing"> _______ notice of previous version times _______ </span>
+<span tal:replace="nothing"> _______ Notice of previous version times _______ </span>
 <metal:block define-macro="datetime_info"
   tal:define="
     start_time python: mangle.DateTime(model.get_public_version_publication_datetime()).toStr();
@@ -32,14 +32,19 @@ manual_close.........Manual close
   >
   <br />
   <p style="margin-top:0.3em; margin-bottom:0.2em;">
-    <span class="subhead" tal:condition="not:end_time" i18n:translate="">
-      Publication time of public version
-    </span>
-    <span class="subhead" tal:condition="end_time" i18n:translate="">
-      Publication and expiration time of public version
-    </span><br />
-    <tal:plug replace="structure python: '%s%s' % (start_time, test(end_time, ' - %s' % end_time, ''))" />
-  </p>
+<span class="subhead"
+  tal:condition="not:end_time"
+  i18n:translate="">
+Publication time of public version
+</span>
+<span class="subhead"
+  tal:condition="end_time"
+  i18n:translate="">
+Publication and expiration time of public version
+</span>
+<br />
+<tal:block replace="structure python: '%s%s' % (start_time, test(end_time, ' - %s' % end_time, ''))" />
+</p>
   <p style="margin-top:0.3em; margin-bottom:0.2em;"
     tal:condition="exists: python: model.get_viewable().display_datetime()">
     <span class="subhead">
@@ -50,11 +55,11 @@ manual_close.........Manual close
   </p>
 </metal:block>
 
-<span tal:replace="nothing"> _______ messages _______ </span>
+<span tal:replace="nothing"> _______ Author/Editor messages _______ </span>
 <div tal:omit-tag=""
   tal:condition="python:model.get_approval_request_message()"
   metal:define-macro="messages">
-<tr class="top-controls">
+<tr class="inter-controls">
 <td colspan="2">
 <h3 i18n:translate="">
 messages
@@ -64,13 +69,15 @@ messages
 
 <tr class="even">
 <td class="feedback"
-  colspan="2" i18n:translate="">
+  colspan="2"
+  i18n:translate="">
 <span tal:replace="python:model.get_approval_requester()" i18n:name="author_id">author id</span>
-sent a message on
+sent a message on 
 <span tal:replace="structure python:mangle.DateTime(model.get_approval_request_datetime()).toStr()"
   i18n:name="some_date">some date</span>
-<tal:if condition="python:model.get_approval_request_message()" i18n:name="with_comments">
-  <tal:block i18n:translate="">with the following comments:</tal:block>
+<tal:if condition="python:model.get_approval_request_message()"
+  i18n:name="with_comments">
+<tal:inline i18n:translate="">with the following comments:</tal:inline>
 </tal:if>
 </td>
 </tr>
@@ -82,7 +89,7 @@ sent a message on
   style="padding:0">
 <div class="message"
   tal:content="python:model.get_approval_request_message() or 'whatever'">
-message text
+  message text
 </div>
 </td>
 </tr>
@@ -95,8 +102,8 @@ message text
 <tr tal:condition="python:model.get_approval_request_message()">
 <td class="feedback"
  colspan="2" i18n:translate="">
-A previous request for approval has been rejected / withdrawn by
-<span tal:replace="python:model.get_approval_requester()" i18n:name="requester" /> on
+A previous request for approval has been rejected / withdrawn by 
+<span tal:replace="python:model.get_approval_requester()" i18n:name="requester" /> on 
 <span tal:replace="structure python:mangle.DateTime(model.get_approval_request_datetime()).toStr()" i18n:name="some_date">some date</span>.
 <tal:comment condition="nothing"> actually the last message may not have been written
   by the person withdrawing the request; if this person for example made an empty reject,
@@ -113,26 +120,22 @@ The last message regarding this issue is:
   colspan="2">
 <div class="message"
   tal:content="message">
-message text
+  message text
 </div>
 </td>
 </tr>
 
-<tr class="top-controls">
+<tr class="inter-controls">
 <td colspan="2">
-  <h3 i18n:translate="">request approval
-      <span tal:condition="python:may_change_content and unapproved and published" i18n:name="for_new_version">
-          <tal:block i18n:translate="">for new version</tal:block>
-      </span>
-  </h3>
+<h3 i18n:translate="">request approval <span tal:condition="python:may_change_content and unapproved and published" i18n:name="for_new_version"><tal:block i18n:translate="">for new version</tal:block></span></h3>
 </td>
 </tr>
+
 <tr>
 <th i18n:translate="">
 message to editor
 </th>
-<th style="width:50%"
-  i18n:translate="">
+<th style="width:40%" i18n:translate="">
 notes
 </th>
 </tr>
@@ -140,10 +143,8 @@ notes
 <tr class="odd"
   tal:define="field view/tab_status_form_author/message">
 <td class="align-right">
-  <tal:block
-    replace="structure python: field.render(REQUEST=request)"
-    attributes="id field/id"
-  />
+<tal:input
+  replace="structure python: field.render(REQUEST=request)" />
 </td>
 <td i18n:translate="">
 This message will remain visible in the status screen for other authors and editors.
@@ -151,15 +152,12 @@ This message will remain visible in the status screen for other authors and edit
 </tr>
 
 <tr metal:use-macro="here/tab_status_macros/macros/date_controls">
-  pub/exp/display controls inserted
+  pub/exp/display controls inserted (see below, @ line 241)
 </tr>
 
-
-
 <tr class="controls">
-<td class="align-right"
-  colspan="2">
-<input
+<td class="align-right" colspan="2">
+<input 
   type="submit"
   value="request approval"
   class="button"
@@ -178,7 +176,7 @@ This message will remain visible in the status screen for other authors and edit
 <span tal:replace="nothing"> _______ Editor can change settings _______ </span>
 <div metal:define-macro="approved_editor" tal:omit-tag="">
 <form action="." method="post">
-<tr class="top-controls">
+<tr class="inter-controls">
 <td colspan="2">
 <h3 i18n:translate="">
 change settings
@@ -190,23 +188,23 @@ change settings
 <th class="align-right" i18n:translate="">
 current timings
 </th>
-<th style="width:40%" i18n:translate="">
+<th i18n:translate="">
 notes
 </th>
 </tr>
 
 <tr metal:use-macro="here/tab_status_macros/macros/date_controls">
-  pub/exp/display controls inserted
+  pub/exp/display controls inserted (see below, @ line 241)
 </tr>
 
 <tr class="inter-controls">
 <td class="align-right"
   colspan="2">
-<input type="submit"
-  value="update timings"
+<input type="submit" 
+  value="update timing"
+  name="tab_status_change_settings:method"
   class="button"
   title="access key: alt-u"
-  name="tab_status_change_settings:method"
   accesskey="u"
   i18n:attributes="value;title"
 />
@@ -217,24 +215,23 @@ notes
 <span tal:replace="nothing"> _______ / Editor can change settings _______ </span>
 
 
-
-<span tal:replace="nothing"> ______________ sub tables ______________ </span>
-
+<span tal:replace="nothing"> ______________ Subtables ______________ </span>
 
 <span tal:replace="nothing"> _______ Editor approves _______ </span>
 <div tal:omit-tag=""
   metal:define-macro="approve_new">
-<form action="." method="post">
+<form action="tab_status_approve" method="post">
 <table class="listing sublisting">
-<tr class="top-controls">
+<tr class="inter-controls">
 <td colspan="2">
 <h3>
 <span tal:condition="python:not closed or (unapproved and (closed or published))"
   i18n:translate="">
-  publish new version
+publish new version
 </span>
-<span tal:condition="python: closed and not unapproved" i18n:translate="">
-  publish closed version
+<span tal:condition="python: closed and not unapproved"
+  i18n:translate="">
+publish closed version
 </span>
 </h3>
 </td>
@@ -249,74 +246,17 @@ notes
 </th>
 </tr>
 
-<metal:def define-macro="date_controls">
-<tr class="even"
-  tal:define="field view/tab_status_form_editor/publish_datetime">
-<td class="align-right" style="white-space: nowrap;">
-<label title="access key: alt-m"
-  accesskey="m"
-  tal:content="field/title"
-  tal:attributes="for field/id"
-  i18n:attributes="title"
-  i18n:translate="">
-  content publish time
-</label>
-<input tal:replace="structure python: field.render(REQUEST=request)" />
-</td>
-<td i18n:translate="">
-day / month / year &nbsp;23:59
-</td>
-</tr>
-
-<tr class="odd"
-  tal:define="field view/tab_status_form_editor/expiration_datetime">
-<td class="align-right" style="white-space: nowrap;">
-<label title="access key: alt-o"
-  accesskey="o"
-  tal:content="field/title"
-  tal:attributes="for field/id"
-  i18n:attributes="title"
-  i18n:translate="">
-  expiration time
-</label>
-<input tal:replace="structure python: field.render(REQUEST=request)" />
-</td>
-<td tal:content="structure field/description">
-  description
-</td>
-</tr>
-
-<tal:block condition="nothing">__ SilvaNews additional fields __</tal:block>
-<tr class="even"
- tal:define="field view/tab_status_form_news/display_datetime">
-<td class="align-right">
-<label
-  title="access key: alt-h"
-  accesskey="h"
-  tal:attributes="for field/id"
-  tal:content="field/title"
-  i18n:attributes="title"
-  i18n:translate="">
-  field title
-</label>
-<input tal:replace="structure python: field.render()" />
-<td tal:content="structure field/description">
-  description
-</td>
-</tr>
-
-<tal:block condition="nothing">__ end SilvaNews additional fields __</tal:block>
-</metal:def>
+<metal:block use-macro="view/NewsItem/tab_status_macros/macros/date_controls" />
 
 <tr class="inter-controls">
 <td class="align-right"
   colspan="2">
 <input class="button"
-  name="tab_status_approve:method"
   type="submit"
+  name="tab_status_approve:method"
   value="approve for future"
-  title="approve new versions for publication at a later date: alt-f"
-  accesskey="f"
+  title="access key: alt-o"
+  accesskey="o"
   i18n:attributes="value;title"
 />
 <input class="executor"
@@ -335,12 +275,75 @@ day / month / year &nbsp;23:59
 <span tal:replace="nothing"> _______ / Editor approves _______ </span>
 
 
+<metal:def define-macro="date_controls"> 
+<tr class="even"
+  style="vertical-align:middle"
+  tal:define="field view/tab_status_form_editor/publish_datetime">
+<td class="align-right" style="white-space: nowrap;">
+<label title="access key: alt-m"
+  accesskey="m"
+  tal:content="field/title"
+  tal:attributes="for field/id"
+  i18n:attributes="title"
+  i18n:translate="">
+content publish time
+</label>
+<input tal:replace="structure python: field.render(REQUEST=request)" />
+</td>
+<td i18n:translate="">
+day / month / year &nbsp;23:59
+</td>
+</tr>
+
+<tr class="odd"
+  tal:define="field view/tab_status_form_editor/expiration_datetime">
+<td class="align-right" style="white-space: nowrap;">
+<label title="access key: alt-o"
+  accesskey="o"
+  tal:content="field/title"
+  tal:attributes="for field/id"
+  i18n:attributes="title"
+  i18n:translate="">
+expiration time
+</label>
+<input tal:replace="structure python: field.render(REQUEST=request)" />
+</td>
+<td style="vertical-align:middle"
+  tal:content="structure field/description">
+  description
+</td>
+</tr>
+
+<tal:block condition="nothing">__ SilvaNews additional fields __</tal:block>
+<tr class="even"
+ tal:define="field view/tab_status_form_news/display_datetime">
+<td class="align-right">
+<label 
+  title="access key: alt-h"
+  accesskey="h"
+  tal:attributes="for field/id"
+  tal:content="field/title"
+  i18n:attributes="title"
+  i18n:translate="">
+  field title
+</label>
+<input tal:replace="structure python: field.render(REQUEST=request)" />
+</td>
+<td tal:content="structure field/description">
+  description
+</td>
+</tr>
+
+<tal:block condition="nothing">__ end SilvaNews additional fields __</tal:block>
+</metal:def>
+
+
 <span tal:replace="nothing"> _______ Author/Editor withdraws/rejects request for approval _______ </span>
 <div tal:omit-tag=""
   metal:define-macro="withdraw_request_approval">
 <form action="tab_status_withdraw" method="post">
 <table class="listing">
-<tr class="top-controls">
+<tr class="inter-controls">
 <td colspan="2">
 <h3>
 <tal:block condition="may_approve_content" i18n:translate="">reject</tal:block>
@@ -364,7 +367,7 @@ rejection
 withdrawal
 </tal:block>
 </th>
-<th style="width:50%"
+<th style="width:40%"
   i18n:translate="">
 notes
 </th>
@@ -388,25 +391,24 @@ The message may be viewed by local users.
 <td>
 &nbsp;
 </td>
-<td class="align-right"
-  width="40%">
-<input
-  type="submit"
-  class="button"
-  title="access key: alt-j"
+<td class="align-right">
+<input 
+  type="submit" 
+  class="button"  
+  title="access key: alt-j" 
   accesskey="j"
-  tal:condition="may_approve_content"
-  value="reject approval request"
-  i18n:attributes="title;value"
+  tal:condition="may_approve_content" 
+  value="reject approval request" 
+  i18n:attributes="title;value" 
 />
-<input
-  type="submit"
-  class="button"
-  title="access key: alt-r"
+<input 
+  type="submit" 
+  class="button"  
+  title="access key: alt-r" 
   accesskey="r"
-  tal:condition="not: may_approve_content"
+  tal:condition="not: may_approve_content" 
   value="withdraw approval request"
-  i18n:attributes="title;value"
+  i18n:attributes="title;value" 
 />
 </td>
 </tr>
@@ -422,7 +424,7 @@ The message may be viewed by local users.
 <form action="tab_status_revoke" method="post">
 <table class="listing sublisting">
 <thead>
-<tr class="top-controls">
+<tr class="inter-controls">
 <td>
 <h3 i18n:translate="">
 revoke approval
@@ -442,12 +444,12 @@ If further editing is required, first revoke the approval.
 <tfoot>
 <tr class="controls">
 <td class="align-right">
-<input
-  type="submit"
-  value="revoke approval"
-  class="button"
+<input 
+  type="submit" 
+  value="revoke approval" 
+  class="button" 
   title="access key: alt-v"
-  accesskey="v"
+  accesskey="v" 
   i18n:attributes="value;title" />
 </td>
 </tr>
@@ -463,15 +465,15 @@ If further editing is required, first revoke the approval.
   metal:define-macro="revert_to_previous">
 <form action="tab_status_revert_to_previous" method="post">
 <table class="listing">
-<tr class="top-controls">
+<tr class="inter-controls">
 <td>
-  <h3 i18n:translate="">
-  revert to previous version
+<h3 i18n:translate="">
+revert to previous version
 </h3>
 </td>
 </tr>
 <tr class="even">
-  <td i18n:translate="">
+<td i18n:translate="">
 The current editable version can be replaced with the previous (published)
 version. This can not be undone afterwards and will discard all changes
 made to the current version.
@@ -485,7 +487,7 @@ made to the current version.
   title="access key: alt-p"
   accesskey="p"
   onclick="return confirm('Really revert ?')"
-  i18n:attributes="value;title;onclick"
+  i18n:attributes="value;title"
 />
 </td>
 </tr>
@@ -501,16 +503,16 @@ made to the current version.
 <form action="tab_status_close" method="post">
 <table class="listing">
 <thead>
-<tr class="top-controls">
+<tr class="inter-controls">
 <td>
-  <h3 i18n:translate="">manual close</h3>
+<h3 i18n:translate="">manual close</h3> 
 </td>
 </tr>
 </thead>
 
 <tbody>
 <tr class="even">
-  <td i18n:translate="">
+<td i18n:translate="">
 If necessary, the published version of this content can be manually closed (taken offline). It will also be removed from the public index.
 </td>
 </tr>
@@ -523,7 +525,7 @@ If necessary, the published version of this content can be manually closed (take
   type="submit"
   value="close published version"
   title="access key: alt-c"
-  accesskey="c"
+  accesskey="c" 
   i18n:attributes="value;title"
 />
 </td>
